<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EBEB"
    android:backgroundTint="#F8EBEB"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="465dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/clear"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/brackets"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/percentage"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/div"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_7"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_8"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_9"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/multiply"
                android:textSize="30sp"
                tools:text="X" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_4"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button10"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_5"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button11"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_6"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button12"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/sub"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button13"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_1"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button14"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_2"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button15"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_3"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button16"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/add"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button17"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/ac"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button18"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/_0"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button19"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/point"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button20"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="#DF9F9F"
                android:text="@string/equal"
                android:textSize="30sp"/>
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="352dp"
        android:layout_height="94dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="97dp"
        android:backgroundTint="#FAFFFFFF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="Enter the number"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:text="@string/my_calculator"
        android:textStyle="italic|bold"
        android:textSize="15sp"/>
</RelativeLayout>